server finalization